--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="jk pic.png" width="200" height="200" alt="JK profile picture"></td>
+      <td> <img src="JK pic.png" width="200" height="200" alt="JK profile picture"></td>
       <td>
         <h1>Kuchkorov Jakhongir</h1>
         <p><em>Ysu student1</em><strong><a href="https://www.ysu.ac.kr/kor/Main.do">YSU</a> student</strong>.</p>
